--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     <p id="loading">Please wait...</p>
 
     <div class="summary">
-      <h2 id="result"></h2><hr>
+      <p id="result"></p>
+      <p id="unitRate"></p>
+      
       <div class="countries">
         <div id="countriesTo"></div>
         <div id="countriesFrom"></div>  
